--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -513,7 +513,7 @@ p {
         top: 116%;
         left: 0;
         width: 100%;
-        background-color: #fff;
+        background-color: #050757;
         z-index: 8; } }
     .navbar-area .navbar .navbar-nav .nav-item {
       margin: 0 16px;
