--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -89,6 +89,7 @@ p {
 
 /*===== All Button Style =====*/
 .main-btn {
+  margin-bottom: 20px;
   display: inline-block;
   font-weight: 500;
   text-align: center;
@@ -607,7 +608,8 @@ p {
   text-align: center; }
   @media (max-width: 767px) {
     .header-countdown .single-count-content {
-      padding: 0 10px; } }
+      padding: 0 10px;
+      margin-top: -20px; } }
   @media only screen and (min-width: 576px) and (max-width: 767px) {
     .header-countdown .single-count-content {
       padding: 0 15px; } }
@@ -617,7 +619,7 @@ p {
     line-height: 60px; }
     @media (max-width: 767px) {
       .header-countdown .single-count-content .count {
-        font-size: 24px;
+        font-size: 34px;
         line-height: 30px; } }
     @media only screen and (min-width: 576px) and (max-width: 767px) {
       .header-countdown .single-count-content .count {
