2nd commit with all original images of sponsor

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -10,7 +10,7 @@ body {
   font-family: "Poppins", sans-serif;
   font-weight: normal;
   font-style: normal;
-  color: #777777;
+  color: #ffffff;
   overflow-x: hidden; }
 
 * {
